add sh